--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -29,7 +29,7 @@ jobs:
             git clone -b parse_projects https://github.com/veracode/gen-ir.git
             cd gen-ir
             swift build
-            sudo cp ./build/debug/gen-ir /usr/bin/gen-ir
+            sudo cp .build/debug/gen-ir /usr/bin/gen-ir
       
 #       - name: Install Homebrew dependencies
 #         run: brew tap veracode/tap && brew install gen-ir
