--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -29,7 +29,7 @@ jobs:
             git clone -b parse_projects https://github.com/veracode/gen-ir.git
             cd gen-ir
             swift build
-            echo $PATH.| tr ":" "\n"
+            echo "Built gen-ir in debug mode, installing in /usr/lobal/bin"
             sudo cp ./.build/debug/gen-ir /usr/local/bin/gen-ir
       
 #       - name: Install Homebrew dependencies
