--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -48,7 +48,10 @@ jobs:
       - name: Generate IR with a Build Log
         run:  gen-ir build.log Mastodon.xcarchive/IR
         
-      - name: Show tree
+      - name: Install tree
+        run: brew install tree
+        
+      - name: Tree
         run: tree
         
       - name: Build Veracode dir
