--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Setup
+        env: 
+          NotificationEndpointDebug: ${{ secrets.NotificationEndpointDebug }}
+          NotificationEndpointRelease: ${{ secrets.NotificationEndpointRelease }}
         run: |
             cd /Users/runner/work/mastodon-ios/mastodon-ios/
             gem install bundler:2.3.11
